[package]
name = "ground"
version = "0.1.0"
authors = ["Patrick Oppel <patrick.oppel94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
bincode = "1.3"
serde = "1.0"
# cubeos-error = {path = "../cubeos-error"}
cubeos-error = { git = "https://github.com/Cube-OS/cubeos-error.git"}